// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-details should render with _label="Zusammenfassung" _disabled=false _open=false 1`] = `
<kol-details class="kol-details">
  <template shadowrootmode="open">
    <div class="collapsible details" id="nonce">
      <kol-heading-wc _label="" _level="1" class="collapsible__heading details__heading">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button details__heading-button" slot="expert"></kol-button-wc>
      </kol-heading-wc>
      <div class="collapsible__wrapper details__wrapper">
        <div class="collapsible__wrapper-animation details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content details__content indented-text" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=false _open=true 1`] = `
<kol-details _open="" class="kol-details">
  <template shadowrootmode="open">
    <div class="collapsible details open" id="nonce">
      <kol-heading-wc _label="" _level="1" class="collapsible__heading details__heading">
        <kol-button-wc _ariacontrols="nonce-control" _ariaexpanded="" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button details__heading-button" slot="expert"></kol-button-wc>
      </kol-heading-wc>
      <div class="collapsible__wrapper details__wrapper">
        <div class="collapsible__wrapper-animation details__wrapper-animation">
          <div class="collapsible__content details__content indented-text" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=true _open=false 1`] = `
<kol-details class="kol-details">
  <template shadowrootmode="open">
    <div class="collapsible details disabled" id="nonce">
      <kol-heading-wc _label="" _level="1" class="collapsible__heading details__heading">
        <kol-button-wc _ariacontrols="nonce-control" _disabled="" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button details__heading-button" slot="expert"></kol-button-wc>
      </kol-heading-wc>
      <div class="collapsible__wrapper details__wrapper">
        <div class="collapsible__wrapper-animation details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content details__content indented-text" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=true _open=true 1`] = `
<kol-details _open="" class="kol-details">
  <template shadowrootmode="open">
    <div class="collapsible details disabled open" id="nonce">
      <kol-heading-wc _label="" _level="1" class="collapsible__heading details__heading">
        <kol-button-wc _ariacontrols="nonce-control" _ariaexpanded="" _disabled="" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button details__heading-button" slot="expert"></kol-button-wc>
      </kol-heading-wc>
      <div class="collapsible__wrapper details__wrapper">
        <div class="collapsible__wrapper-animation details__wrapper-animation">
          <div class="collapsible__content details__content indented-text" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=0 1`] = `
<kol-details class="kol-details">
  <template shadowrootmode="open">
    <div class="collapsible details" id="nonce">
      <kol-heading-wc _label="" _level="1" class="collapsible__heading details__heading">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button details__heading-button" slot="expert"></kol-button-wc>
      </kol-heading-wc>
      <div class="collapsible__wrapper details__wrapper">
        <div class="collapsible__wrapper-animation details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content details__content indented-text" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=1 1`] = `
<kol-details class="kol-details">
  <template shadowrootmode="open">
    <div class="collapsible details" id="nonce">
      <kol-heading-wc _label="" _level="1" class="collapsible__heading details__heading">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button details__heading-button" slot="expert"></kol-button-wc>
      </kol-heading-wc>
      <div class="collapsible__wrapper details__wrapper">
        <div class="collapsible__wrapper-animation details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content details__content indented-text" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=2 1`] = `
<kol-details class="kol-details">
  <template shadowrootmode="open">
    <div class="collapsible details" id="nonce">
      <kol-heading-wc _label="" _level="1" class="collapsible__heading details__heading">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button details__heading-button" slot="expert"></kol-button-wc>
      </kol-heading-wc>
      <div class="collapsible__wrapper details__wrapper">
        <div class="collapsible__wrapper-animation details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content details__content indented-text" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=3 1`] = `
<kol-details class="kol-details">
  <template shadowrootmode="open">
    <div class="collapsible details" id="nonce">
      <kol-heading-wc _label="" _level="1" class="collapsible__heading details__heading">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button details__heading-button" slot="expert"></kol-button-wc>
      </kol-heading-wc>
      <div class="collapsible__wrapper details__wrapper">
        <div class="collapsible__wrapper-animation details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content details__content indented-text" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=4 1`] = `
<kol-details class="kol-details">
  <template shadowrootmode="open">
    <div class="collapsible details" id="nonce">
      <kol-heading-wc _label="" _level="1" class="collapsible__heading details__heading">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button details__heading-button" slot="expert"></kol-button-wc>
      </kol-heading-wc>
      <div class="collapsible__wrapper details__wrapper">
        <div class="collapsible__wrapper-animation details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content details__content indented-text" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=5 1`] = `
<kol-details class="kol-details">
  <template shadowrootmode="open">
    <div class="collapsible details" id="nonce">
      <kol-heading-wc _label="" _level="1" class="collapsible__heading details__heading">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button details__heading-button" slot="expert"></kol-button-wc>
      </kol-heading-wc>
      <div class="collapsible__wrapper details__wrapper">
        <div class="collapsible__wrapper-animation details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content details__content indented-text" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=6 1`] = `
<kol-details class="kol-details">
  <template shadowrootmode="open">
    <div class="collapsible details" id="nonce">
      <kol-heading-wc _label="" _level="1" class="collapsible__heading details__heading">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button details__heading-button" slot="expert"></kol-button-wc>
      </kol-heading-wc>
      <div class="collapsible__wrapper details__wrapper">
        <div class="collapsible__wrapper-animation details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content details__content indented-text" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" 1`] = `
<kol-details class="kol-details">
  <template shadowrootmode="open">
    <div class="collapsible details" id="nonce">
      <kol-heading-wc _label="" _level="1" class="collapsible__heading details__heading">
        <kol-button-wc _ariacontrols="nonce-control" _icons="codicon codicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button details__heading-button" slot="expert"></kol-button-wc>
      </kol-heading-wc>
      <div class="collapsible__wrapper details__wrapper">
        <div class="collapsible__wrapper-animation details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content details__content indented-text" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;
